--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
     var start_content = {
       chase_title:
-        "To. 유깅이❣️ <br>(음악버튼눌려죠)",
+        "To. 유깅이❣️",
       chase_text:
         "합격 메세지 받으셨나요?<br><br>면접만 잘하면 되는건가요?<br>합격하셨으니 제가 한국으로 놀러가도 되는건가요?<br>맛집도 가고, 여행도 갈 준비가 되신건가요?<br><br><um style='color: #F44336; font-weight: 300;'>행복할 준비 되셨나요?</um>",
       chase_benefit: [
