--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         "앵 왜 실화냐 ? 행복하다고해!!!!!",
         "베스킨 민초 ㄱㄱ?",
         "상록수 항정살 ㄱㄱ?",
-        "에이 이정도면 오기 세여. 예.. 예 예..",
+        "에이 이 정도면 억지세여. 예.. 예 예..",
         "<um style='color: #F44336;font-weight: 300;'>yes ? yes ?</um>"
       ],
       bg_style: "bg_custom",
