--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
       pure_words_content:
         `<br><br><br>공주양💛💛
 
-합격을 진심으로 축하해! 지금 ${year}년 ${month}월 ${date}일 ${hours}시 ${minutes}분, 이 순간부터 너의 새로운 시작을 응원할게!!!!!
+합격을 진심으로 축하해! 지금 ${year}년 ${month}월 ${date}일 ${hours}시 ${minutes}분, <br>이 순간부터 너의 새로운 시작을 응원할게!!!!!
 
-너무 너무 너무 고생 많았어..ㅠㅠ 매일매일 노력하고 성장하는 널 보면서, 나도 덩달아 감동이 마구마구 올라왔었어. 네가 잘되기를 간절히 바랐고, 이렇게 좋은 소식을 듣게 되서 뿌듯하고 행복해 ㅠㅠ 그래서 니가 좋아하는 데이식스 원필의 '행운을 빌어줘'를 bgm으로 선곡해봤는데.. 우때 ? 맘에들어 ? 앞으로도 유깅이의 앞길에 행운이 가득하길 빌어줄께!!!
+너무 너무 너무 고생 많았어..ㅠㅠ <br>매일매일 노력하고 성장하는 널 보면서, 나도 덩달아 감동이 마구마구 올라왔었어. 네가 잘되기를 간절히 바랐고, 이렇게 좋은 소식을 듣게 되서 뿌듯하고 행복해 ㅠㅠ 그래서 니가 좋아하는 데이식스 원필의 '행운을 빌어줘'를 bgm으로 선곡해봤는데.. 우때 ? 맘에들어 ? 앞으로도 유깅이의 앞길에 행운이 가득하길 빌어줄께!!!
 
-그리고 더 빛나고, 더 좋은 모습으로 발전하는 너를 기대할께!! 이번 합격은 매일 새벽 5시까지 안자구 꿋꿋이 개발한 네 끈기와 열정이 만든 결과야👍🏻👍🏻👍🏻 미래에 있을 새로운 도전과 환경에서도 늘 당당하고 자신 있게 나아가길 바라!!👏🏻👏🏻
+더 빛나고, 더 좋은 모습으로 발전하는 너를 기대할께!! 이번 합격은 매일 새벽 5시까지 안자구 꿋꿋이 개발한 네 끈기와 열정이 만든 결과야👍🏻👍🏻👍🏻 미래에 있을 새로운 도전과 환경에서도 늘 당당하고 자신 있게 나아가길 바라!!👏🏻👏🏻
 
 힘들고 지칠 때마다 네가 걸어왔던 길을 돌아보며 힘을 얻었으면 좋겠어! 그리고 너 주변엔 결과에 상관없이 항상 너를 응원하는 사람들이 있단걸 잊지마!!
 
